Homepage title is no longer visible above the fold on mobile

--- a/docroot/themes/iucn_who/css/style.css
+++ b/docroot/themes/iucn_who/css/style.css
@@ -10697,24 +10697,6 @@ h6.view-sites-search .view-header {
     padding-bottom: 100px;
   }
 }
-@media screen and (max-width: 767px) and (orientation: portrait) {
-  .block-home-page-map .map-block-main {
-    margin-bottom: -268px;
-    padding-bottom: 268px;
-  }
-}
-@media screen and (max-width: 767px) and (orientation: portrait) and (min-width: 373px) {
-  .block-home-page-map .map-block-main {
-    margin-bottom: -240px;
-    padding-bottom: 240px;
-  }
-}
-@media screen and (max-width: 767px) and (orientation: portrait) and (min-width: 734px) {
-  .block-home-page-map .map-block-main {
-    margin-bottom: -212px;
-    padding-bottom: 212px;
-  }
-}
 @media screen and (min-width: 768px) {
   .map-block-main {
     display: flex;
