--- a/docroot/themes/iucn_who/less/theme/maps.less
+++ b/docroot/themes/iucn_who/less/theme/maps.less
@@ -20,18 +20,18 @@
       margin-bottom: (-@navbar-height--mobile - 50px);
       padding-bottom: (@navbar-height--mobile + 50px);
       // min-height: 320px;
-      @media (orientation: portrait) {
-        margin-bottom: (-@navbar-height--mobile - 50px - 12 * @font-size-base--mobile);
-        padding-bottom: (@navbar-height--mobile + 50px + 12 * @font-size-base--mobile);
-        @media (min-width: 373px) {
-          margin-bottom: (-@navbar-height--mobile - 50px - 10 * @font-size-base--mobile);
-          padding-bottom: (@navbar-height--mobile + 50px + 10 * @font-size-base--mobile);
-        }
-        @media (min-width: 734px) {
-          margin-bottom: (-@navbar-height--mobile - 50px - 8 * @font-size-base--mobile);
-          padding-bottom: (@navbar-height--mobile + 50px + 8 * @font-size-base--mobile);
-        }
-      }
+      // @media (orientation: portrait) {
+      //   margin-bottom: (-@navbar-height--mobile - 50px - 12 * @font-size-base--mobile);
+      //   padding-bottom: (@navbar-height--mobile + 50px + 12 * @font-size-base--mobile);
+      //   @media (min-width: 373px) {
+      //     margin-bottom: (-@navbar-height--mobile - 50px - 10 * @font-size-base--mobile);
+      //     padding-bottom: (@navbar-height--mobile + 50px + 10 * @font-size-base--mobile);
+      //   }
+      //   @media (min-width: 734px) {
+      //     margin-bottom: (-@navbar-height--mobile - 50px - 8 * @font-size-base--mobile);
+      //     padding-bottom: (@navbar-height--mobile + 50px + 8 * @font-size-base--mobile);
+      //   }
+      // }
     }
 
   }
